--- a/assets/sass/contatnInfo.sass
+++ b/assets/sass/contatnInfo.sass
@@ -18,8 +18,10 @@
         z-index: 5
         margin-left: 0
         &__phone
-            margin-left: 20px
+            margin-left: 0px
             margin-bottom: 10px
         &__city
             img
                 margin-right: 8px
+
+@media (max-width: 320px)
