--- a/assets/sass/nav.sass
+++ b/assets/sass/nav.sass
@@ -2,7 +2,8 @@
     display: flex
     justify-content: space-between
     align-items: center
-    margin-bottom: 150px
+    margin: 20px 0
+    margin-bottom: 225px
     &-wrapper
         display: flex
         justify-content: space-between
